# email-service

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
code/: app.py  config.py  email_sender.py
code/routes/: email.py
code/utils/: logger.py
