
[tool.poetry]
name = "email-service"
version = "0.0.1"
description = "Email service using SMTP"
authors = ["Zaid Athar"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.5"
Flask-Cors = "^4.0.0"
Flask-Limiter = "^3.3.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"